--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1737874207490861"
      crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" sizes="32x32" href="/suhail.png">
+    <link rel="icon" type="image/jpg" sizes="32x32" href="https://telegra.ph/file/d72deaffcab4cb15c6921.jpg">
     <title>VIBEZ MD</title>
     <head>
 
